# Hallenreservation

./: .gitignore  README.md  pyproject.toml
src/: main.py  orchestrator.py  show_subs.py
src/email/: email_sender.py  reservation_reminder_handler.py
src/email/email_processors/: email_processor_base.py  reservation_email_processor.py  subscription_update_email_processor.py
src/email/email_templates/: immediate_notification_email_template.py  reminder_email_template.py  subscription_update_confirmation_email_template.py
src/utils/: config.py  credentials.py  email_processor_base.py  email_sender.py  errors.py  find_attachment_meta.py  find_attachment_meta_prompt.py  fixed_o365_account.py  improved_onepassword.py  is_test_mode.py  logging.py  processor.py  reservation_email_processor.py  reservation_reminder.py  set_api_keys.py  setup_logging.py  subscription_meta.py  subscription_update_email_processor.py  typed_o365.py  typed_pymupdf.py
src/utils/manual_authentication/: authenticate_manually.py  step_1.py  step_2.py
src/utils/template/: reminder_email_template.py
