[project]
name = "qr_bill"
version = "0.0.1"
description = "Create qr bills"
authors = []
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.4",
    "openai>=1.58.1",
    "watchdog>=6.0.0",
    "ruff>=0.8.6",
    "o365>=2.0.38",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "jupyter",
    "ipynb",
    "1password",
    "mypy",
]

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

