[project]
name = "Hallenreservation"
version = "0.0.1"
description = "Hallenreservation processing system"
authors = []
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.10.4",
    "openai>=1.58.1",
    "watchdog>=6.0.0",
    "ruff>=0.8.6",
    "o365>=2.0.38",
    "pymupdf",
]

[dependency-groups]
dev = [
    "pytest",
    "jupyter",
    "ipynb",
    "1password",
    "mypy",
]

[tool.mypy]
files = "src, tests"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
exclude = [
]

